# atlas-sdk

./: .gitignore  AtlasSDK.cpp  AtlasSDK.h  CMakeLists.txt  README.md
atlas/: CMakeLists.txt
atlas/core/: CMakeLists.txt
atlas/core/math/: CMakeLists.txt  math.h
atlas/core/matrix/: CMakeLists.txt  mat4.h
atlas/core/quaternion/: CMakeLists.txt  quaternion.h
atlas/core/shapes/: CMakeLists.txt  shape.h  shape2.h
atlas/core/vectors/: CMakeLists.txt  vec2.h  vec3.h
core/math/: CMakeLists.txt
core/matrix/: CMakeLists.txt  mat4.h
core/vectors/: CMakeLists.txt  vec2.h  vec3.h
include/atlas/core/matrix/: mat4.h
include/atlas/core/quaternion/: quaternion.h
include/atlas/core/shapes/: shape.h  shape2.h
include/atlas/core/transform/: transform.h
include/atlas/core/vectors/: vec2.h  vec2i.h  vec3.h  vec3i.h
include/atlas/physics/raycast/: raycast.h
include/atlas/physics/shapes/: shape.h  shape2.h  shape2d.h
src/core/math/: math.cpp
src/core/matrix/: mat4.cpp
src/core/quaternion/: quaternion.cpp
src/core/shapes/: shape.cpp  shape2.cpp
src/core/transform/: transform.cpp
src/core/vectors/: vec2.cpp  vec2i.cpp  vec3.cpp  vec3i.cpp
src/physics/broadphase/: broadphase.cpp  broadphase2d.cpp
src/physics/raycast/: raycast.cpp  raycast2d.cpp
src/physics/shapes/: shape.cpp  shape2.cpp  shape2d.cpp
tests/: CMakeLists.txt
tests/broadphase/: CMakeLists.txt  broadphase2d_test.cpp  broadphase2d_test.h  broadphase_test.cpp  broadphase_test.h
tests/raycast/: CMakeLists.txt  raycast2d_test.cpp  raycast2d_test.h  raycast_test.cpp  raycast_test.h
tests/shapes/: CMakeLists.txt  shape2_test.cpp  shape2_test.h  shape2d_test.cpp  shape2d_test.h  shape_test.cpp  shape_test.h
tests/transform/: CMakeLists.txt  transform_test.cpp  transform_test.h
